creazione scheletro pagina

--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <!-- inizio intestazione-->
+    <header>
+
+        <!--inizio menu-->
+        <nav></nav>
+        <!--inizio menu-->
+
+    </header>
+    <!-- fine intestazione-->
+
+    <!--inizio parte centrale-->
+    <main>
+        <!--inzio jambotrom-->
+        <div class="jambotrom"></div>
+        <!--inzio jambotrom-->
+
+        <!--inzio prima section-->
+        <section></section>
+        <!--fine prima section-->
+        
+        <!--inzio seconda section-->
+        <section></section>
+        <!--fine seconda section-->
+
+        <!--inzio terza section-->
+        <section></section>
+        <!--fine terza section-->
+
+    </main>
+    <!--fine parte centrale-->
+
+    <!--inizio pie di pagina-->
+    <footer></footer>
+    <!--fine pie di pagina-->
+
+
     
 </body>
 </html>
