--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
 
     <!-- inizio intestazione-->
     <header>
+        <img id="logo" src="img/logo.svg" alt="logo Discord">
         <!--inizio menu-->
         <nav>
-            
+            <ul>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perchè Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
+            </ul>
         </nav>
         <!--inizio menu-->
 
         <!--inzio pulsante accedi-->
-        
+        <h3><a href="#">Accedi</a></h3>
         <!--fine pulsante accedi-->
 
     </header>
@@ -27,7 +34,21 @@
     <!--inizio parte centrale-->
     <main>
         <!--inzio jambotrom-->
-        <div class="jambotrom"></div>
+        <div class="jambotrom">
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, <br>
+               gruppo di gamer, comunità artistica mondiale, <br>
+               o semplicemente di un piccolo gruppo di amici che vuole <br>
+               passare il tempo assieme, Discord rende più facile chiacchierare ogni <br>
+               giorno e ritrovarsi più spesso. <br>
+            </p>
+            <div class="button1">
+                <a href="#"> <span id="freccia"> &#8595;</span>Scarica per Mac</a>
+            </div>
+            <div class="button2">
+                <a href="#">Apri Discord nel tuo browser</a>
+            </div>
+        </div>
         <!--inzio jambotrom-->
 
         <!--inzio prima section-->
