--- a/index.html
+++ b/index.html
@@ -35,19 +35,23 @@
     <main>
         <!--inzio jambotrom-->
         <div class="jambotrom">
-            <h1>Il tuo posto per parlare</h1>
-            <p>Che tu faccia parte di un club scolastico, <br>
+          <div class="box-jambotrom">
+            <div class="titolo-paragrafo">
+              <h1>Il tuo posto per parlare</h1>
+              <p>Che tu faccia parte di un club scolastico, <br>
                gruppo di gamer, comunità artistica mondiale, <br>
                o semplicemente di un piccolo gruppo di amici che vuole <br>
                passare il tempo assieme, Discord rende più facile chiacchierare ogni <br>
                giorno e ritrovarsi più spesso. <br>
-            </p>
+               </p>
+            </div>
             <div class="button1">
                 <a href="#"> <span id="freccia"> &#8595;</span>Scarica per Mac</a>
             </div>
             <div class="button2">
                 <a href="#">Apri Discord nel tuo browser</a>
             </div>
+          </div>
         </div>
         <!--inzio jambotrom-->
 
