--- a/index.html
+++ b/index.html
@@ -58,17 +58,32 @@
         <!--inzio prima section-->
         <section>
             <div class="conteiner clearfix">
-                <div class="img box"></div>
-                <div class="paragrafo box"></div>
+                <div class="img box">
+                    <img class="immagine" src="img/item1.svg" alt="rana Discord">
+                </div>
+                <div class="paragrafo box">
+                    <h2>Un luogo a invito con tutto <br>
+                        lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici <br>
+                       in cui puoi collaborare, condividere o semplicemente parlare <br>
+                       della tua giornata senza intasare una chat di gruppo.</p>    
+                </div>
             </div>
         </section>
         <!--fine prima section-->
-        
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#808080" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,250.7C672,235,768,181,864,181.3C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
         <!--inzio seconda section-->
         <section>
-            <div class="conteiner clearfix">
-                <div class="img box"></div>
-                <div class="paragrafo box"></div>
+            <div class="conteiner clearfix container-special">
+                <div class="img box" id="special">
+                    <img class="immagine"src="img/item2.svg" alt="mago Discord">
+                </div>
+                <div class="paragrafo box">
+                    <h2 id="titolo-special">Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai <br>
+                       tempo. Gli amici nel tuo server possono vedere che sei <br>
+                       lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
         </section>
         <!--fine seconda section-->
 
